--- a/Pages/connectionPage/index.css
+++ b/Pages/connectionPage/index.css
@@ -2,4 +2,79 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container4 {
+  background-color: #29323f;
+  min-height: 100vh;
+  padding: 0 50px;
+}
+.container4 .helper-box {
+  display: flex;
+}
+.container4 .helper-box b {
+  color: var(--White, #fff);
+  font-family: Poppins;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.183px;
+  text-transform: capitalize;
+  margin-top: 30px;
+}
+.container4 .helper-box ul {
+  display: flex;
+  flex-direction: column;
+  margin-left: 150px;
+}
+.container4 .helper-box ul .title {
+  opacity: 0.5;
+  color: var(--White, #fff);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 20px;
+  margin-top: 40px;
+}
+.container4 .helper-box ul li {
+  color: var(--White, #fff);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  text-transform: capitalize;
+  list-style-type: none;
+}
+.container4 .helper-box ul li a {
+  text-decoration: none;
+  color: var(--White, #fff);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  text-transform: capitalize;
+}
+.container4 .helper-box ul .subscribe input {
+  outline: none;
+  border-radius: 8px;
+  border: 1px solid var(--White, #fff);
+  background: none;
+  width: 200px;
+  height: 50px;
+  padding: 5px 10px;
+}
+.container4 .helper-box ul .subscribe button {
+  background-color: #ffffff;
+  width: 120px;
+  height: 50px;
+  border-radius: 3px;
+  border: none;
+}
+.container4 .helper-box .finish {
+  display: flex;
 }/*# sourceMappingURL=index.css.map */
