--- a/Pages/supportPage/index.css
+++ b/Pages/supportPage/index.css
@@ -1,5 +1,108 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container5 {
+  background-image: url(../../images/Rectangle\ 39.png);
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+.container5 .support {
+  margin-left: 800px;
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container5 .support form {
+  width: 496px;
+  height: 563px;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.9);
+  -webkit-backdrop-filter: blur(25px);
+          backdrop-filter: blur(25px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container5 .support form b {
+  color: var(--black, #221e1e);
+  font-family: Inter;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 10px;
+}
+.container5 .support form p {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+  margin-bottom: 30px;
+}
+.container5 .support form input {
+  width: 427px;
+  height: 50px;
+  border: 1px solid #dfdfdf;
+  padding: 7px 10px;
+  outline: none;
+  margin-bottom: 17px;
+}
+.container5 .support form input::-moz-placeholder {
+  color: #9f9d9d;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
+.container5 .support form input::placeholder {
+  color: #9f9d9d;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
+.container5 .support form textarea {
+  width: 427px;
+  height: 112px;
+  border: 1px solid #dfdfdf;
+  resize: none;
+  outline: none;
+  padding: 7px 10px;
+  margin-bottom: 17px;
+  color: #9f9d9d;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
+.container5 .support form button {
+  width: 150px;
+  height: 50px;
+  background-color: #2c66b8;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
 }/*# sourceMappingURL=index.css.map */
