--- a/Pages/aboutPage/index.css
+++ b/Pages/aboutPage/index.css
@@ -2,4 +2,60 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container3 {
+  padding: 98px 80px 80px;
+  background: #edf1f8;
+}
+.container3 h1 {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 54px;
+}
+.container3 .box {
+  display: flex;
+}
+.container3 .box ul {
+  width: 484px;
+  border-radius: 23px;
+  background: #fff;
+}
+.container3 .box ul .blue {
+  color: var(--White, #fff);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  border-radius: 8px;
+  background: var(--blue-link, #2c66b8);
+  list-style-type: none;
+}
+.container3 .box ul li {
+  list-style-type: none;
+}
+.container3 .box ul li h2 {
+  color: var(--black, #221e1e);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  width: 156px;
+}
+.container3 .box ul li p {
+  color: var(--black, #221e1e);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: capitalize;
+  width: 400px;
 }/*# sourceMappingURL=index.css.map */
