--- a/Pages/succesPage/index.css
+++ b/Pages/succesPage/index.css
@@ -2,4 +2,34 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container2 h1 {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.container2 ul li h2 {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.container2 ul li p {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
 }/*# sourceMappingURL=index.css.map */
