--- a/Pages/succesPage/index.css
+++ b/Pages/succesPage/index.css
@@ -4,16 +4,6 @@
   box-sizing: border-box;
 }
 
-.container2 {
-  padding: 80px 150px;
-  border-radius: 20px;
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .container2 h1 {
   color: var(--black, #221e1e);
   text-align: center;
@@ -23,9 +13,51 @@
   font-weight: 600;
   line-height: normal;
 }
-
 .container2 ul li h2 {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.container2 ul li p {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: capitalize;
+}
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container2 {
+  padding: 80px 150px;
+  border-radius: 20px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container2 h1 {
+  color: var(--black, #221e1e);
+  text-align: center;
+  font-family: Inter;
+  font-size: 42px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
 .container2 ul {
   display: flex;
   align-items: center;
@@ -45,7 +77,6 @@
   fill: linear-gradient(152deg, #479cbb 10.49%, #4e81ba 88.69%);
 }
 .container2 ul li b {
-
   color: var(--black, #221e1e);
   text-align: center;
   font-family: Inter;
